<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.imc01.Interpretation" >
 
    <TextView
        android:id="@+id/leConseil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Interpretation de la valeur de l&apos;IMC"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FF6600"
        android:textStyle="bold" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dip"
        android:background="#FF6600" />
    
    <TableRow>
        <TextView
			 android:text="- 16.5"
			 android:layout_column="1"
			 android:gravity="left"
			 android:padding="5dip" />
        
        <TextView
			 android:text="@string/denutrition"
			 android:layout_column="1"
			 android:gravity="left"
			 android:padding="5dip" /> 
			 
    </TableRow>
    
    <TableRow>
        <TextView
			 android:text="16.5 à 18.5"
			 android:layout_column="1"
			 android:gravity="left"
			 android:padding="5dip" /> 
			 
        <TextView
			 android:text="@string/maigreur"
			 android:layout_column="1"
			 android:gravity="left"
			 android:padding="5dip" /> 
			 
    </TableRow>
    
    <TableRow>
        <TextView
			 android:text="18.5 à 25"
			 android:layout_column="1"
			 android:gravity="left"
			 android:padding="5dip" /> 
			 
        <TextView
			 android:text="@string/corpulence_normale"
			 android:layout_column="1"
			 android:gravity="left"
			 android:padding="5dip" />  
			 
    </TableRow>
    
    <TableRow>
        <TextView
			 android:text="25 à 30"
			 android:layout_column="1"
			 android:gravity="left"
			 android:padding="5dip" /> 
			 
        <TextView
			 android:text="@string/surpoids"
			 android:layout_column="1"
			 android:gravity="left"
			 android:padding="5dip" /> 
			 
    </TableRow>
    
    <TableRow>
        <TextView
			 android:text="30 à 35"
			 android:layout_column="1"
			 android:gravity="left"
			 android:padding="5dip" /> 
			 
        <TextView
			 android:text="@string/obesite_modere"
			 android:layout_column="1"
			 android:gravity="left"
			 android:padding="5dip" />  
			 
    </TableRow>
    
    <TableRow>
       <TextView
			 android:text="35 à 40"
			 android:layout_column="1"
			 android:gravity="left"
			 android:padding="5dip" /> 
			 
        <TextView
			 android:text="@string/obesite_severe"
			 android:layout_column="1"
			 android:gravity="left"
			 android:padding="5dip" />  
	</TableRow>
	<TableRow>
       <TextView
			 android:text="+ de 40"
			 android:layout_column="1"
			 android:gravity="left"
			 android:padding="5dip" /> 
			 
        <TextView
			 android:text="@string/obesite_massive"
			 android:layout_column="1"
			 android:gravity="left"
			 android:padding="5dip" />  
	</TableRow>
    
    
    <View
        android:layout_width="wrap_content"
        android:layout_height="1dip"
        android:background="#FF6600" />

    <Button
        android:id="@+id/quitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retour"/>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
    </ScrollView>

</TableLayout>
